starrs/overseerr/resources/overseerr-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: overseerr
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  serviceName: overseerr
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: config
      labels:
        name: overseerr
        app: overseerr
        part-of: starrs
    spec:
      containers:
        - name: overseerr
          image: overseerr-image ***REMOVED*** lscr.io/linuxserver/overseerr - controlled by Kustomize
          resources:
            limits:
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 256Mi
          ports:
            - containerPort: 5055
              hostPort: 5055
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
      securityContext:
        runAsUser: 0
        runAsGroup: 210101
        fsGroup: 210101
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "storage-fast"
        resources:
          requests:
            storage: 1Gi
