starrs/overseerr/resources/overseerr-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: starrs
  labels:
    app: overseerr
  name: overseerr
spec:
  ports:
    - name: "overseerr-5055"
      port: 5055
      protocol: TCP
      targetPort: 5055
  selector:
    app: overseerr
